swap collection.toList toList