@@ -34,15 +34,15 @@ class GetTaskTypesResponseTest {
             .isEqualTo(taskTypeResponses);
 
         assertThat(getTaskTypesResponse.getTaskTypeResponses()
-                .stream().collect(Collectors.toList()).get(0).getTaskType())
+                .stream().toList().get(0).getTaskType())
             .isEqualTo(taskType);
 
         assertThat(getTaskTypesResponse.getTaskTypeResponses()
-                .stream().collect(Collectors.toList()).get(0).getTaskType().getTaskTypeId())
+                .stream().toList().get(0).getTaskType().getTaskTypeId())
             .isEqualTo("taskTypeId");
 
         assertThat(getTaskTypesResponse.getTaskTypeResponses()
-                .stream().collect(Collectors.toList()).get(0).getTaskType().getTaskTypeName())
+                .stream().toList().get(0).getTaskType().getTaskTypeName())
             .isEqualTo("taskTypeName");
 
     }
